--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./CSS/style.css" />
     <link rel="shortcut icon" href="./favicon.ico?" type="image/x-icon" />
     <!-- Abbas Raza (CCO-116677) -->
-    <style></style>
   </head>
   <body>
     <main>
@@ -42,7 +41,7 @@
             <td>11:00 AM</td>
             <td rowspan="3">
               XPath <br />
-              <hr style="border-top: 3px double black" />
+              <hr id="XSL_HR" />
               XSL Transformations
             </td>
           </tr>
